[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vantari"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless",
    "pymupdf",
    "numpy",
]

[project.scripts]
vantari = "vantari:main"

[tool.setuptools]
py-modules = ["vantari"]